--- a/Desktop/web design/Portfolio/index.html
+++ b/Desktop/web design/Portfolio/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tamilselvan portfolio</title>
+  <title>Tamilselvan portfolio ★</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -183,6 +183,7 @@
               <label for="exampleFormControlTextarea1" class="form-label">Subject</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
 
           </form>
         </div>
