--- a/Desktop/web design/Portfolio/index.html
+++ b/Desktop/web design/Portfolio/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-md-2">
           <div class="card text-center">
-            <img src="/Portfolio/image/Html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./image/Html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">Html</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -104,7 +104,7 @@
         </div>
         <div class="col-md-2">
           <div class="card text-center">
-            <img src="/Portfolio/image/css.png" class="card-img-top w-50 m-auto pt-3" alt="html">
+            <img src="./image/css.png" class="card-img-top w-50 m-auto pt-3" alt="html">
             <div class="card-body">
               <h5 class="card-title">Css</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md-2">
           <div class="card text-center">
-            <img src="/Portfolio/image/js.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./image/js.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">Javascript</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -124,7 +124,7 @@
         </div>
         <div class="col-md-2">
           <div class="card text-center">
-            <img src="/Portfolio/image/jquery.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./image/jquery.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">jquery</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -134,7 +134,7 @@
         </div>
         <div class="col-md-2">
           <div class="card text-center">
-            <img src="/Portfolio/image/java.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./image/java.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">Java</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -144,7 +144,7 @@
         </div>
         <div class="col-md-2">
           <div class=" card text-center">
-            <img src="/Portfolio/image/Bootstrap.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+            <img src="./image/Bootstrap.png" class="card-img-top w-25 m-auto pt-4" alt="html">
             <div class="card-body">
               <h5 class="card-title">Bootstrap</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
